# migratex

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/custom/: README.md  context.rs  main.rs  metadata.rs
examples/custom/migrations/: m1_initial.rs  mod.rs
examples/custom_store/: README.md  main.rs  metadata.rs
examples/custom_store/migrations/: m1_initial.rs  m2_something.rs
examples/json/: README.md  main.rs
examples/json/migrations/: m1_initial.rs  m2_something.rs  mod.rs
examples/json_store/: README.md  main.rs  metadata.rs
examples/sqlx/: README.md  context.rs  db_path.rs  main.rs  metadata.rs  sqlx_store.rs
examples/sqlx/migrations/: m1_initial.rs  m2_products.rs  mod.rs
src/: helpers.rs  lib.rs  metadata.rs  migratex.rs  migration.rs
src/store/: json_metadata.rs  json_store.rs  metadata_store.rs  mod.rs  sqlite_metadata.rs
tests/: json_store_tests.rs  metadata_tests.rs  migratex_tests.rs
tests/common/: mod.rs
