[package]
name = "migratex"
version = "0.2.0"
edition = "2024"
authors = ["Nicolas talle <dev@nicolab.net>"]
license = "MIT"
repository = "https://github.com/nicolab/migratex"
categories = ["development-tools", "database", "data-structures", "web-programming", "rust-patterns"]
keywords = ["migration", "migrations", "migrate", "database", "versioning"]
description = "Agnostic migration toolkit library."
documentation = "https://docs.rs/migratex"

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.42"
okerr = "1.0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# Used/compiled only whith json feature
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = {version = "1.0.145", optional = true}
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"], optional = true}

[dev-dependencies]

[features]
default = []
json = ["serde", "serde_json"]
sqlx = ["dep:sqlx"]

[[example]]
name = "custom"
required-features = ["json"]

[[example]]
name = "json"
required-features = ["json"]

[[example]]
name = "sqlx"
required-features = ["sqlx"]
